containers-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange
  template:
    metadata:
      labels:
        app: data-exchange
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}

      containers:
        - name: busybox
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              while true; do
                echo "$(date) Data from busybox" >> /shared/data.txt
                sleep 5
              done
          volumeMounts:
            - name: shared-data
              mountPath: /shared

        - name: multitool
          image: wbitt/network-multitool
          command:
            - sh
            - -c
            - sleep infinity
          volumeMounts:
            - name: shared-data
              mountPath: /shared
