containers-data-exchange_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-sc
  template:
    metadata:
      labels:
        app: data-exchange-sc
    spec:
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: netology-pvc

      containers:
        - name: writer
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              while true; do
                echo "$(date) - writer data" >> /data/output.log
                sleep 5
              done
          volumeMounts:
            - name: shared
              mountPath: /data

        - name: reader
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              tail -f /data/output.log
          volumeMounts:
            - name: shared
              mountPath: /data
