deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-app
  template:
    metadata:
      labels:
        app: multi-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80

        - name: multitool
          image: wbitt/network-multitool
          command: ["sh", "-c", "nc -lk -p 8080"]
