deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  replicas: 5

  selector:
    matchLabels:
      app: nginx

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:

      - name: nginx
        image: nginx:1.19

      - name: multitool
        image: wbitt/network-multitool
