deployment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-delayed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-delayed
  template:
    metadata:
      labels:
        app: nginx-delayed
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
