multitool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-client
spec:
  containers:
    - name: multitool
      image: praqma/network-multitool
      command: ["sh", "-c", "sleep 3600"]
