nginx-v1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-v1

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx
      version: v1

  template:

    metadata:
      labels:
        app: nginx
        version: v1

    spec:

      containers:

      - name: nginx
        image: nginx:1.28

        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html


      volumes:

      - name: html
        configMap:
          name: nginx-page-v1
