nginx-v2.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-v2


spec:

  replicas: 1

  selector:
    matchLabels:
      app: nginx
      version: v2


  template:

    metadata:
      labels:
        app: nginx
        version: v2


    spec:

      containers:

      - name: nginx
        image: nginx:1.28


        volumeMounts:

        - name: html
          mountPath: /usr/share/nginx/html


      volumes:

      - name: html
        configMap:
          name: nginx-page-v2
