service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc
spec:
  selector:
    app: multi-app
  type: ClusterIP
  ports:
    - name: nginx-port
      port: 9001
      targetPort: 80

    - name: multitool-port
      port: 9002
      targetPort: 8080
