service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-nodeport
spec:
  selector:
    app: multi-app
  type: NodePort
  ports:
    - name: nginx-node
      port: 80
      targetPort: 80
      nodePort: 30080
