service-v1.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service

spec:

  selector:
    app: nginx
    version: v1


  ports:

  - port: 80
    targetPort: 80
