service-v2.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-canary-service


spec:

  selector:
    app: nginx
    version: v2


  ports:

  - port: 80
    targetPort: 80
