service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app: netology-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
