service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-delayed
  ports:
    - port: 80
      targetPort: 80
