ingress-canary.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: nginx-canary


  annotations:

    nginx.ingress.kubernetes.io/canary: "true"

    nginx.ingress.kubernetes.io/canary-weight: "10"


spec:

  ingressClassName: nginx


  rules:

  - host: canary.local


    http:

      paths:

      - path: /

        pathType: Prefix


        backend:

          service:

            name: nginx-canary-service

            port:

              number: 80
