ingress-main.yaml

apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: nginx-main


spec:

  ingressClassName: nginx


  rules:

  - host: canary.local


    http:

      paths:

      - path: /

        pathType: Prefix


        backend:

          service:

            name: nginx-service

            port:

              number: 80
